<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

   <androidx.appcompat.widget.Toolbar
       android:id="@+id/toolbar"
       android:layout_width="match_parent"
       android:layout_height="?actionBarSize"
       android:background="@color/background_buttons"
       android:layout_marginBottom="20dp"
       android:elevation="4dp"
       android:theme="@style/Theme.AppCompat.DayNight.DarkActionBar"/>

   <AnalogClock
       android:id="@+id/clock"
       android:layout_width="wrap_content"
       android:layout_height="100dp"
       android:layout_below="@id/toolbar"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_for_name"
        android:labelFor="@id/etName"
        android:id="@+id/label_etName"
        android:textSize="19sp"
        android:layout_marginLeft="15dp"
        android:paddingBottom="8dp"
        android:paddingTop="20dp"
        android:layout_below="@id/clock"/>

    <EditText
        android:id="@+id/etName"
        android:inputType="textPersonName"
        android:layout_width="match_parent"
        android:background="@drawable/rounded_corner_views"
        android:textStyle="bold"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:hint="@string/name_value"
        android:textAlignment="center"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginBottom="20dp"
        android:layout_below="@id/label_etName"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_for_age"
        android:id="@+id/label_etAge"
        android:labelFor="@id/etAge"
        android:textSize="19sp"
        android:paddingBottom="8dp"
        android:layout_marginLeft="15dp"
        android:layout_below="@id/etName"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:background="@drawable/rounded_corner_views"
        android:padding="8dp"
        android:textStyle="bold"
        android:hint="@string/age_value"
        android:id="@+id/etAge"
        android:textAlignment="center"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_below="@id/label_etAge"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textColor="#FFFF"
        android:hint="@string/accept_value"
        android:textColorHint="@color/white"
        android:textStyle="bold"
        android:id="@+id/btnAccept"
        android:backgroundTint="@color/background_buttons"
        android:layout_below="@id/etAge"/>

</RelativeLayout>